--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "websocket": "^1.0.34",
+    "helmet": "^6.0.1",
+    "mongoose": "^7.0.3",
+    "time-stamp": "^2.2.0",
     "ws": "^8.13.0"
   }
 }
